# BlockEngine

./: .gitignore  Build Windows.bat  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp
src/core/: Renderer.cpp  Renderer.h
src/datatypes/: Instance.cpp  Instance.h  Task.cpp  Task.h
src/ui/: Console.cpp  TextEditor.cpp  TextEditor.h
